dev/manifests/3rd-party/keycloak/service.yaml
---
# Source: keycloak/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: "hornet"
  labels:
    app.kubernetes.io/name: keycloak
    helm.sh/chart: keycloak-15.1.3
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: keycloak
  annotations:
    pia-team.com/app: keycloak
    pia-team.com/app-logo: keycloak
    pia-team.com/app-title: Keycloak
    pia-team.com/role: pia.k8s.keycloak/0.9.1
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
    nodePort:
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/component: keycloak
