dev/manifests/3rd-party/keycloak/keycloak-egress-network-policy.yml
---
# Source: xxxxx/templates/keycloak-egress-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-external-egress
  annotations:
    pia-team.com/role: pia.k8s.keycloak/0.9.1
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.21.0/24
    ports:
    - port: 53
      protocol: UDP
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/name: keycloak
  policyTypes:
  - Egress
---
# Source: xxxxx/templates/keycloak-egress-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-egress
  annotations:
    pia-team.com/role: pia.k8s.keycloak/0.9.1
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 53
      protocol: UDP
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/name: keycloak
  policyTypes:
  - Egress
